bash: Add inputrc for readline configuration

--- a/bash/Makefile
+++ b/bash/Makefile
@@ -3,12 +3,16 @@
 CURRENT_DIR = $(shell pwd)
 
 BASHRC  = $(HOME)/.bashrc
+INPUTRC  = $(HOME)/.inputrc
 PROMPT = $(HOME)/.prompt
 
-all: $(BASHRC) $(PROMPT)
+all: $(BASHRC) $(INPUTRC) $(PROMPT)
 
 $(BASHRC): bashrc
 	ln -s $(CURRENT_DIR)/bashrc $(BASHRC)
+
+$(INPUTRC): inputrc
+	ln -s $(CURRENT_DIR)/inputrc $(INPUTRC)
 
 $(PROMPT): prompt
 	ln -s $(CURRENT_DIR)/prompt $(PROMPT)
