vim: Add snippets

--- a/vim/Makefile
+++ b/vim/Makefile
@@ -4,23 +4,28 @@ CURRENT_DIR = $(shell pwd)
 
 VIMRC    = $(HOME)/.vimrc
 VIMDIR   = $(HOME)/.vim
-VIMSPELL = $(HOME)/.vim/spell
+SPELL    = $(VIMDIR)/spell
+SNIPPETS = $(VIMDIR)/snippets
+VUNDLE   = $(VIMDIR)/bundle/vundle
 
-all: $(VIMRC) $(VIMSPELL) vundle
+all: $(VIMRC) $(SPELL) $(SNIPPETS) vundle
 
 $(VIMRC): vimrc
 	ln -s $(CURRENT_DIR)/vimrc $(VIMRC)
 
-$(VIMSPELL): spell | $(VIMDIR)
-	ln -s $(CURRENT_DIR)/spell $(VIMSPELL)
+$(SPELL): spell | $(VIMDIR)
+	ln -s $(CURRENT_DIR)/spell $(SPELL)
+
+$(SNIPPETS): spell | $(VIMDIR)
+	ln -s $(CURRENT_DIR)/snippets $(SNIPPETS)
+
+$(VUNDLE):
+	git clone https://github.com/gmarik/vundle.git $(VIMDIR)/bundle/vundle
 
 $(VIMDIR):
 	mkdir -p $(VIMDIR)
 
-vundle: $(VIMDIR)/bundle/vundle
+vundle: $(VUNDLE)
 	vim +BundleInstall +qall
-
-$(VIMDIR)/bundle/vundle:
-	git clone https://github.com/gmarik/vundle.git $(VIMDIR)/bundle/vundle
 
 .PHONY: all vundle
