bash: Split out environment variables configuration

--- a/bash/Makefile
+++ b/bash/Makefile
@@ -2,9 +2,10 @@
 
 CURRENT_DIR = $(shell pwd)
 
-BASHRC  = $(HOME)/.bashrc
-INPUTRC  = $(HOME)/.inputrc
-PROMPT = $(HOME)/.prompt
+BASHRC      = $(HOME)/.bashrc
+INPUTRC     = $(HOME)/.inputrc
+PROMPT      = $(HOME)/.prompt
+BASH_CONFIG = $(HOME)/.config/bash
 
 all: $(BASHRC) $(INPUTRC) $(PROMPT)
 
@@ -16,5 +17,8 @@ $(INPUTRC): inputrc
 
 $(PROMPT): prompt
 	ln -s $(CURRENT_DIR)/prompt $(PROMPT)
+
+$(BASH_CONFIG): bash_config
+	ln -s $(CURRENT_DIR)/bash_config $(BASH_CONFIG)
 
 .PHONY: all
