--- a/termite/config
+++ b/termite/config
@@ -14,7 +14,7 @@ search_wrap = true
 #geometry = 640x480
 
 # "system", "on" or "off"
-cursor_blink = off
+cursor_blink = system
 
 # "block", "underline" or "ibeam"
 cursor_shape = block
