shell: Add profile

--- a/shell/Makefile
+++ b/shell/Makefile
@@ -3,6 +3,7 @@
 CURRENT_DIR = $(shell pwd)
 
 BASHRC      = $(HOME)/.bashrc
+PROFILE     = $(HOME)/.profile
 INPUTRC     = $(HOME)/.inputrc
 BASH_CONFIG = $(HOME)/.config/bash
 
@@ -10,6 +11,9 @@ all: $(BASHRC) $(INPUTRC) $(PROMPT) $(BASH_CONFIG)
 
 $(BASHRC): bashrc
 	ln -sfn $(CURRENT_DIR)/bashrc $(BASHRC)
+
+$(PROFILE): profile
+	ln -sfn $(CURRENT_DIR)/profile $(PROFILE)
 
 $(INPUTRC): inputrc
 	ln -sfn $(CURRENT_DIR)/inputrc $(INPUTRC)
