shell: Add xprofile

--- a/shell/Makefile
+++ b/shell/Makefile
@@ -4,6 +4,7 @@ CURRENT_DIR = $(shell pwd)
 
 BASHRC      = $(HOME)/.bashrc
 PROFILE     = $(HOME)/.profile
+XPROFILE    = $(HOME)/.xprofile
 INPUTRC     = $(HOME)/.inputrc
 BASH_CONFIG = $(HOME)/.config/bash
 
@@ -14,6 +15,9 @@ $(BASHRC): bashrc
 
 $(PROFILE): profile
 	ln -sfn $(CURRENT_DIR)/profile $(PROFILE)
+
+$(XPROFILE): xprofile
+	ln -sfn $(CURRENT_DIR)/xprofile $(XPROFILE)
 
 $(INPUTRC): inputrc
 	ln -sfn $(CURRENT_DIR)/inputrc $(INPUTRC)
